automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
 
   <body>
     <header>
-            
-
+        <nav>
+          <a>New Questions</a>
+          <a>About</a>
+          <a>Icebreakers</a>
+        </nav>      
     </header>
   </body>
 </html>
