automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <header>
         <nav>
           <ul>
-          <a>New Questions</a>
-          <a>About</a>
-          <a>Icebreakers</a>
+            <li>New Questions</li>
+            <li>About</li>
+            <li>Icebreakers</li>
         </ul>
         </nav>
     </header>
