automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -8,10 +8,15 @@
     <header>
         <nav>
           <ul>
-            <li>New Questions</li>
-            <li>About</li>
+            <li>
+              <a>New Questions</a>
+            </li>
+            <li>
+              <a>About</a>
+            </li>
         </ul>
         </nav>
+          <h3>Icebreakers</h3>
     </header>
   </body>
 </html>
