--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
             </li>
         </ul>
         </nav>
-          <h3>Icebreakers</h3>
+          <h3>
+            <a>Icebreakers</a>
+          </h3>
     </header>
   </body>
 </html>
